# open-meteo

./: Dockerfile  docker-compose.yam  pyproject.toml
weather_app/: .cache.sqlite
weather_app/get_weather/: apps.py  tests.py  utils.py  views.py
weather_app/get_weather/open_meteo_api/: api.py
weather_app/get_weather/templates/: index.html
weather_app/weather_app/: settings.py  urls.py
